fixed layout issues, improved files detail card, improved loader, added api error message

--- a/src/theme/general.scss
+++ b/src/theme/general.scss
@@ -70,8 +70,3 @@ pre {
 .no-border-left {
   border-left: none !important;
 }
-
-.highlighted {
-  border: .5px solid white;
-  border-radius: 4px;
-}
