--- a/src/theme/overwrite.scss
+++ b/src/theme/overwrite.scss
@@ -20,21 +20,18 @@
 }
 
 // Tree view
-.single-dir-view .v-treeview-node__content {
-  margin-left: -10px !important;
+.theme--dark.v-treeview--hoverable .v-treeview-node__root:hover:before,
+.theme--dark.v-treeview .v-treeview-node--click>.v-treeview-node__root:hover:before {
+  border-radius: 4px;
 }
 
-.v-treeview-node__toggle {
-  margin-left: 12px !important;
+button.v-icon.notranslate.v-treeview-node__toggle.v-icon--link.mdi.mdi-menu-down.theme--dark.v-treeview-node__toggle--open {
+  margin-left: 0;
 }
 
-//.v-treeview-node.v-treeview-node--rounded .v-treeview-node__root, .v-treeview-node.v-treeview-node--rounded .v-treeview-node__root:before {
-//  border-radius: 4px!important;
-//  border-top-left-radius: 24px !important;
-//  border-top-right-radius: 24px !important;
-//  border-bottom-right-radius: 4px !important;
-//  border-bottom-left-radius: 4px !important;
-//}
+.v-treeview-node__root .v-treeview-node__level:first-of-type {
+  width: 6px;
+}
 
 // Layout
 .row {
